<?xml version="1.0"?>
<package format="2">
  <name>px4ctrl</name>
  <version>0.0.0</version>
  <description>A package to control multi-copters using PX4 platform</description>
  <maintainer email="iszhouxin@zju.edu.cn">uav</maintainer>

  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>uav_utils</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>uav_utils</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>uav_utils</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
